# CommandAndLotter

./: .gitignore
game/: .gitignore  AckCon19.cmake  AckCon19.pro  CMakeLists.txt  build.bat  main.c  main.c.autosave  main.wdl  map0.txt  readme.txt
game/assets/: Crystalmeth.mdl  EYE.mdl  FogOfWar.tga  StrasseBogen.mdl  StrasseGerade.mdl  StrasseGerade.mdl~HEAD  StrasseTKZ.mdl  StraßeGerade.mdl  StraßeKZ.mdl  Vertex.mdl  cEselslerche - Kopie.mdl  cEselslerche.mdl  cEselslerche1b.mdl  cEselslerche2.mdl  cEselslercheBU.mdl  cbabe.MDL  evilSputnik.mdl  eye.mdl  eye2.mdl  eye3ds0.3ds  eye3ds1.3ds  eye3ds10.3ds  eye3ds100.3ds  eye3ds101.3ds  eye3ds102.3ds  eye3ds103.3ds  eye3ds104.3ds  eye3ds105.3ds  eye3ds106.3ds  eye3ds107.3ds  eye3ds108.3ds  eye3ds109.3ds  eye3ds11.3ds  eye3ds110.3ds  eye3ds111.3ds  eye3ds112.3ds  eye3ds113.3ds  eye3ds114.3ds  eye3ds115.3ds  eye3ds116.3ds  (+125 more)
game/map/: the-core.psd
game/media/: map0.txt
game/shaders/: building.fx  building_wireframe.fx  crystals.fx  jpsDummyNoFilter.fx  pp_combine.fx  pp_filter.fx  progress-radial.fx  terrain.fx  trees.fx  units.fx  water.fx
game/src/: UnitMangement.c  UnitMangement.h  ai.c  ai.h  ang.c  ang.h  briefing.c  briefing.h  building.c  building.h  camera.c  camera.h  console.h  credits.c  effects2d.c  effects2d.h  enemy_hit.c  fow.c  fow.h  framework.c  framework.h  game.c  game.h  global.h  grid.c  grid.h  ini.c  ini.h  jps.c  jps.h  mainmenu.c  mainmenu.h  map_loader.c  map_loader.h  materials.h  music_player.c  music_player.h  particle.c  progressbars.c  progressbars.h  (+22 more)
game/ui/: H2.png~  (+2 more)
(+45 files in other folders)
